@@ -8,6 +8,7 @@ Changes for templates:
   * Added graphs for InnoDB semaphore waits (issue 124).
   * Added Redis graphs (issue 90).
   * Added --openvz_cmd configuration and command-line option (issue 130).
+  * Added --mysql_ssl configuration and command-line option (issue 103).
 
 2010-01-10: version 1.1.6
 
